--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 authors = ["wasabeef <dadadada.chop@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = ["Cargo.toml", "src/**/*.rs", "resources/Android.json"]
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 prettytable-rs = "^0.8"
+reqwest = "0.9.22"
+clap = "2.33.0"
