add info to toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "droid"
 version = "0.1.0"
 authors = ["wasabeef <dadadada.chop@gmail.com>"]
 edition = "2018"
+homepage = "https://github.com/wasabeef/droid"
+repository = "https://github.com/wasabeef/droid"
+categories = ["command-line-utilities"]
+readme = "README.md"
+keywords = ["prompt", "shell", "bash", "fish", "zsh"]
+license = "MIT/Apache-2.0"
 
 include = ["Cargo.toml", "src/**/*.rs", "resources/Android.json"]
 
