--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ serde_json = "1.0"
 prettytable-rs = "^0.8"
 reqwest = "0.9.22"
 clap = "2.33.0"
+
+[[bin]]
+bench = false
+path = "src/main.rs"
+name = "droid"
