--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ keywords = ["prompt", "shell", "bash", "fish", "zsh"]
 license = "MIT/Apache-2.0"
 description = "A command-line tool for checking Android OS version history."
 
+exclude = ["media/**/*", "resources/**/*"]
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
