--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ exclude = ["media/**/*", "resources/**/*"]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 prettytable-rs = "^0.8"
-reqwest = "0.9.22"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
 clap = "2.33.0"
 
 [[bin]]
